[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "frbao"
version = "0.1.0"
description = "Minimal simulation framework to validate galaxy x FRB-DM clustering measurements"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "cosmoprimo",
    "mockfactory",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["frbao*"]
